crates/typecheck/tests/fixtures/errors/struct_field_mismatch.ax
struct Point { x: Float, y: Float }
fn main() { val p = Point { x: 1.0 } }